test/good/generics/func09.px

func f<A>(A->A g, A x) Int def
    return g(x)

print f(sign, -5)
