test/bad/functions/lambda4.px

func f(Int->Int g) Int def
    return g(5)

f(lambda x, y -> x)
